# ipc-unix_socket-example

./: .gitignore  README.md
c_ws/: CMakeLists.txt
c_ws/src/: ipc_socket.h  publisher.c  subscriber.c
ros2_ws/src/ipc_example/include/ipc_example/: ipc.hpp
ros2_ws/src/ipc_example/src/: ipc.cpp  ipc_node.cpp
ros_humble_docker/: .dockerignore  Dockerfile  obu-ros-driver-docker.sh  ros_entrypoint.sh
ros_humble_docker/ros2_ws/src/ipc_example/: CMakeLists.txt  package.xml
ros_humble_docker/ros2_ws/src/ipc_example/include/ipc_example/: ipc.hpp
ros_humble_docker/ros2_ws/src/ipc_example/src/: ipc.cpp  ipc_ros_sim.cpp
